// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Button default custom className 1`] = `
<button
  class="button  test-class"
  data-testid="button"
>
  Click
</button>
`;

exports[`Test Button default disabled 1`] = `
<button
  class="button "
  data-testid="button"
  disabled=""
>
  Click
</button>
`;

exports[`Test Button default onClick 1`] = `
<button
  class="button "
  data-testid="button"
>
  Click
</button>
`;

exports[`Test Button default onClick with disabled 1`] = `
<button
  class="button "
  data-testid="button"
  disabled=""
>
  Click
</button>
`;

exports[`Test Button default plain 1`] = `
<button
  class="button  is-plain"
  data-testid="button"
>
  Click
</button>
`;

exports[`Test Button default round 1`] = `
<button
  class="button  is-round"
  data-testid="button"
>
  Click
</button>
`;

exports[`Test Button default without attr 1`] = `
<button
  class="button "
  data-testid="button"
>
  Click
</button>
`;
